# genesis

./: CMakeLists.txt  README.md  errors.txt  prompt.md
docs/: architecture.md
include/: Component.hpp  CompoundObject.hpp  Constants.hpp  FunctionalSystem.hpp  ResourceNode.hpp  Tools.hpp
src/: CompoundObject.cpp  FunctionalSystem.cpp  ResourceNode.cpp  main.cpp
